--- a/pom.xml
+++ b/pom.xml
@@ -148,9 +148,9 @@
     <finalName>${project.artifactId}</finalName>
     <plugins>
       <plugin>
-        <groupId>com.coveo</groupId>
+        <groupId>com.spotify.fmt</groupId>
         <artifactId>fmt-maven-plugin</artifactId>
-        <version>2.9</version>
+        <version>2.19</version>
         <configuration>
           <style>google</style>
         </configuration>
