fix: Allow logging of INFO+ from AdminClient (#6)
* Excludes all Log4j2Plugins.dat from the shaded jar, to avoid Log4j2 startup problems (ERROR StatusLogger Unrecognized conversion specifier...)

* Adds a log4j.properties that will be picked up by the Kafka dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,17 @@
               <goal>shade</goal>
             </goals>
             <configuration>
+              <filters>
+                <filter>
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>**/Log4j2Plugins.dat</exclude>
+                    <exclude>META-INF/*.SF</exclude>
+                    <exclude>META-INF/*.DSA</exclude>
+                    <exclude>META-INF/*.RSA</exclude>
+                  </excludes>
+                </filter>
+              </filters>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>com.purbon.kafka.topology.CommandLineInterface</mainClass>
