--- a/.github/workflows/ci-integration-test-legacy.yml
+++ b/.github/workflows/ci-integration-test-legacy.yml
@@ -31,6 +31,8 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java }}
+          distribution: "temurin"
+          cache: maven
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
