--- a/.github/workflows/nightly-artifacts-build.yml
+++ b/.github/workflows/nightly-artifacts-build.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: 11
+          distribution: "temurin"
+          cache: maven
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
