--- a/.github/workflows/release-artifacts-build.yml
+++ b/.github/workflows/release-artifacts-build.yml
@@ -25,6 +25,8 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: 11
+          distribution: "temurin"
+          cache: maven
       - name: Cache dependencies
         uses: actions/cache@v4
         with:
@@ -37,7 +39,8 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: '11'
-          distribution: 'adopt'
+          distribution: "temurin"
+          cache: maven
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
