--- a/.github/workflows/release-artifacts-build-legacy.yml
+++ b/.github/workflows/release-artifacts-build-legacy.yml
@@ -9,17 +9,13 @@ jobs:
     name: Build rpm/deb packages (using maven)
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Set up the JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
           java-version: 8
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+          distribution: "temurin"
+          cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Import private GPG key
