--- a/.github/workflows/release-docker-legacy.yml
+++ b/.github/workflows/release-docker-legacy.yml
@@ -9,7 +9,7 @@ jobs:
     name: Build docker image
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v1
       - name: Docker meta
         id: docker_meta
@@ -21,15 +21,11 @@ jobs:
               {{version}}
               {{major}}.{{minor}}
       - name: Set up the JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
           java-version: 8
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+          distribution: "temurin"
+          cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: copy fat jar
