feat: add option to not warn for read-only streams

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -101,7 +101,6 @@ julie {
     verify.remote.state = false
     verify.remote.state = ${?JULIE_VERIFY_REMOTE_STATE}
 
-
     audit {
        enabled = false
        enabled = ${?JULIE_AUDIT_ENABLED}
@@ -175,4 +174,8 @@ validations {
         op = "gte"
         value = 3
     }
+}
+
+streams {
+    warn-if.read-only = true
 }
